--- a/html5up-story/assets/css/main.css
+++ b/html5up-story/assets/css/main.css
@@ -291,6 +291,9 @@ input, select, textarea {
 		text-align: right;
 	}
 
+	.components{
+		display:none;
+	}
 	@media screen and (max-width: 736px) {
 
 		p.major {
